fix CountryDetails on mobile

--- a/src/Components/CountryDetails/CountryDetails.module.scss
+++ b/src/Components/CountryDetails/CountryDetails.module.scss
@@ -1,4 +1,3 @@
-
 @import "./../../SharedScss/mixins";
 
 .CountryDetails {
@@ -64,6 +63,66 @@
             font-size: 13px;
             margin-right: 10px;
             border-radius: 5px;
+          }
+        }
+      }
+    }
+  }
+  @media screen and (max-width: 1200px) {
+    .dataContainer {
+      .dataRow {
+        flex-direction: column;
+      }
+    }
+  }
+  @media screen and (max-width: 960px) {
+    display: flex;
+    flex-direction: column;
+    .dataContainer {
+      .dataRow {
+        flex-direction: row;
+      }
+    }
+  }
+  @media screen and (max-width: 750px) {
+    padding-top: 128px;
+    display: flex;
+    flex-direction: column;
+    .dataContainer {
+      padding: 77px 0;
+      .name {
+        font-size: 44px;
+        margin-bottom: 34px;
+      }
+      .dataRow {
+        flex-direction: column;
+        .dataCol {
+          .record {
+            padding: 13px 0;
+            h4 {
+              font-size: 27px;
+              margin-right: 10px;
+            }
+            p {
+              font-size: 27px;
+            }
+          }
+          &:last-child {
+            margin-top: 68px;
+          }
+        }
+        &:last-child {
+          h4 {
+            font-size: 31px;
+          }
+          .borders {
+            padding: 35px 0;
+            a {
+              font-size: 23px;
+              font-weight: normal;
+              padding: 12px 60px;
+              margin-right: 20px;
+            }
           }
         }
       }
